# autom3

./: .gitignore  B.y  CMakeLists.txt  F.l  Makefile  fib.txt  generator2.py  lab.tab.c  lab.tab.h  lab3  lex.yy.c  maze.txt  test.txt
ast/: CMakeLists.txt  ast.cpp  ast.h  robot_function.cpp  robot_function.h
lab3.dSYM/Contents/Resources/DWARF/: lab3
lab3.dSYM/Contents/Resources/Relocations/aarch64/: lab3.yml
map/: map.cpp  map.h
robot/: robot.cpp  robot.h
units/: defebition.txt  fib.txt  function.txt
